--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">BlinkIT Clone</string>
+    <string name="profile_title">My Profile</string>
+    <string name="profile_name_label">Name</string>
+    <string name="profile_user_name">Vinod Hacker</string>
+    <string name="profile_phone_label">Phone Number</string>
+    <string name="profile_user_phone">+91 12345 67890</string>
 </resources>
