feat: Added new Sliding Banner

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="profile_user_name">Vinod Hacker</string>
     <string name="profile_phone_label">Phone Number</string>
     <string name="profile_user_phone">+91 12345 67890</string>
-    <string name="home_delivery_time">Blinkit in 11 minutes</string>
+    <string name="home_delivery_time">VPR Fresh in 11 minutes</string>
     <string name="home_user_location">Srinivasa Nagar, Singasandra</string>
     <string name="home_search_hint">Search for products...</string>
 
