--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">BlinkIT Clone</string>
+    <string name="app_name">VPR Fresh</string>
     <string name="profile_title">My Profile</string>
     <string name="profile_name_label">Name</string>
     <string name="profile_user_name">Vinod Hacker</string>
